# serve-ai-analysis

./: .gitignore  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  WEB_APP_README.md  WEB_APP_SUMMARY.md  main.py  pyproject.toml  setup_web_app.sh  start_web_app.py  test_video_processing.py
docs/: cursor_params.md
docs/plan/: FUNCTIONAL_REFACTORING.md  IMPLEMENTATION_ROADMAP.md  NEXT_STEPS_CONFIGURATION_ENHANCEMENT.md  NEXT_STEPS_VIDEO_PROCESSING.md  SERVE_DETECTION_PLAN.md  SERVE_DETECTION_SUMMARY.md  UX_PLAN_V1.md  UX_PLAN_V2.md  restart_plan.md
docs/review/: SERVE_SEGMENTATION_v1.md  SERVE_SEGMENTATION_v2.md  UX_PLAN_V2_REVIEW.md
docs/test_docs/: test_app_1.md
examples/: debug_serve_detection.py  demo.py  process_serves.py
frontend/: index.html
frontend/src/: App.tsx  api.ts  store.ts  types.ts
frontend/src/components/: AnalysisConfig.tsx  ProcessingStatus.tsx  ResultsDownload.tsx  ResultsGallery.tsx  VideoUpload.tsx
src/serve_ai_analysis/: cli.py
src/serve_ai_analysis/dashboard/: __init__.py  app.py  generator.py
src/serve_ai_analysis/metrics/: __init__.py  calculator.py  joint_angles.py  timing.py  velocity.py
src/serve_ai_analysis/pose/: __init__.py  estimator.py  mediapipe_pose.py  pose_estimation.py  pose_functions.py
tests/: test_cli.py  test_serve_detection.py
version/: README.md  VERSION_TEMPLATE.md  v2.0.0-serve-segmentation-implementation.md  v2.1.0-ux-plan-v2-implementation.md  v2.1.0-web-application-implementation.md  v2.2.0-video-processing-pipeline-implementation.md
(+17 files in other folders)
