[project]
name = "serve-ai-analysis"
version = "0.0.1"
description = "Tennis serve analysis pipeline (multi-view 2D + optional monocular 3D)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "typer>=0.16.1",
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Video processing
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    # Pose estimation
    "mediapipe>=0.10.0",
    "ultralytics>=8.0.0",  # YOLO for person detection
    # Data analysis and visualization
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    # Dashboard
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    # PDF generation
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    # Additional utilities
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
serve-ai = "serve_ai_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
